<resources>
    <string name="app_name">InsiderApp</string>
    <string name="restoran">Restoran</string>
    <string name="transportasi">Transportasi</string>
    <string name="penginapan">Penginapan</string>
    <string name="wisata">Wisata</string>
    <string name="cari_wisata">Cari Wisata</string>
    <string name="nama_penginapan">Nama Penginapan</string>
    <string name="_4_5">4.5</string>
    <string name="nama_wisata">nama wisata</string>
    <string name="nama_restoran">nama restoran</string>
</resources>