<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.home.HomeActivity">

    <!-- Header -->
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Malang"
        android:textSize="15sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp" />
    <TextView
        android:id="@+id/tv_title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Insider"
        android:textSize="25sp"
        android:textStyle="bold"
        android:paddingTop="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp" />

    <!-- Search Bar -->
    <androidx.cardview.widget.CardView
        android:id="@+id/search_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        android:layout_marginTop="38dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cari_wisata"
            android:drawableStart="@drawable/baseline_search_24"
            android:padding="12dp"
            android:background="@null" />
    </androidx.cardview.widget.CardView>

    <!-- Tab Menu -->
    <LinearLayout
        android:id="@+id/tab_menu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/search_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tab_wisata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wisata"
            android:padding="8dp" />

        <TextView
            android:id="@+id/tab_penginapan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/penginapan"
            android:padding="8dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tab_restoran"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restoran"
            android:padding="8dp" />

        <TextView
            android:id="@+id/tab_transportasi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transportasi"
            android:padding="8dp" />
    </LinearLayout>

    <!-- RecyclerView for Items -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_penginapan"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/tab_menu"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/item_penginapan" />

    <!-- Bottom Navigation -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:menu="@menu/bottom_nav_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
